# AI-DevSecOps

./: .gitignore  ARCHITECTURE.md  Agentic_Workflow.md  PRD_AI_Operation_Center.md  README.md  adversarial_test.mjs  adversarial_test.ts  adversarial_test_3layer.mjs  adversarial_test_enhanced.mjs  adversarial_test_simple.js  pyproject.toml  requirements.txt  test_vulnerability.js  test_vulnerability.py  test_vulnerability.tsx
Lessons/: Lesson07_Policy_Engine.md  Lesson08_Shell_Ops.md
Lessons_Novice/: Lesson00_Intro.md  Lesson01_Patterns.md  Lesson02_ScanEngine.md  Lesson03_Orchestration.md  Lesson04_AuditLogging.md  Lesson05_Testing.md  Lesson06_AST_Semantics.md
Lessons_Python/: Lesson00_Intro.md  Lesson01_Patterns.md  Lesson02_ScanEngine.md  Lesson03_Orchestration.md  Lesson04_AuditLogging.md  Lesson05_Testing.md  Lesson06_AST_Semantics.md  Lesson07_Policy_Engine.md  Lesson08_Shell_Ops.md  Lesson09_Hybrid_Security.md  Lesson10_Digital_Provenance.md  Lesson11_SOC_Observability.md  Lesson12_Debugging.md  Lesson13_Model_Bridge.md  Lesson14_Prompt_Injection_Defenses.md  Lesson15_CICD_Integration.md  Lesson16_Red_Team_Exercises.md
agent-os/: config.yml
agent-os/commands/plan-product/: 1-plan-product.md
agent-os/product/: mission.md  roadmap.md  tech-stack.md
scripts/: model_verify.py
src/security/: ARCHITECTURE.md  README.md  demo.ts  tech_spec.md
src/security_py/: README.md  __init__.py  __main__.py  demo.py
tests/: __init__.py  adversarial_suite.py  conftest.py  test_ai_auditor_integration.py  test_logic_bomb_detection.py  test_policy_engine.py
(+26 files in other folders)
